--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -15,37 +15,36 @@
 
 <ion-content padding>
   <ion-card>
-
     <ion-item>
       <ion-avatar item-start>
-        <img src="img/marty-avatar.png">
+        <img src="assets/imgs/marty-avatar.png">
       </ion-avatar>
-      <h2>Marty McFly</h2>
-      <p>November 5, 1955</p>
+      <h2 class="feed_title">{{ nome_usuario }}</h2>
+      <p>February 17, 2018</p>
     </ion-item>
 
-    <img src="img/advance-card-bttf.png">
+    <img src="assets/imgs/advance-card-bttf.png">
 
     <ion-card-content>
-      <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
+      <p>E la vamos nós.</p>
     </ion-card-content>
 
     <ion-row>
       <ion-col>
         <button ion-button icon-left clear small>
           <ion-icon name="thumbs-up"></ion-icon>
-          <div>12 Likes</div>
+          <div>1 Likes</div>
         </button>
       </ion-col>
       <ion-col>
         <button ion-button icon-left clear small>
           <ion-icon name="text"></ion-icon>
-          <div>4 Comments</div>
+          <div>1 Comments</div>
         </button>
       </ion-col>
       <ion-col center text-center>
         <ion-note>
-          11h ago
+          1h ago
         </ion-note>
       </ion-col>
     </ion-row>
