--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -14,40 +14,39 @@
 
 
 <ion-content padding>
-  <ion-card>
+  <ion-card *ngFor="let filme of lista_filmes" >
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/imgs/marty-avatar.png">
       </ion-avatar>
-      <h2 class="feed_title">{{ nome_usuario }}</h2>
-      <p>February 17, 2018</p>
+      <h2 class="feed_title">{{ filme.original_title }}</h2>
+      <p>{{ filme.release_date }}</p>
     </ion-item>
 
-    <img src="assets/imgs/advance-card-bttf.png">
+    <img [src]="'https://image.tmdb.org/t/p/w300/' + filme.backdrop_path">
 
     <ion-card-content>
-      <p>E la vamos nós.</p>
+      <p>{{ filme.overview }}</p>
     </ion-card-content>
 
     <ion-row>
       <ion-col>
         <button ion-button icon-left clear small>
           <ion-icon name="thumbs-up"></ion-icon>
-          <div>1 Likes</div>
+          <div>{{ objeto_feed.qntd_likes }}</div>
         </button>
       </ion-col>
       <ion-col>
         <button ion-button icon-left clear small>
           <ion-icon name="text"></ion-icon>
-          <div>1 Comments</div>
+          <div>{{ objeto_feed.qntd_coments }}</div>
         </button>
       </ion-col>
       <ion-col center text-center>
         <ion-note>
-          1h ago
+          {{ objeto_feed.time_coment }}
         </ion-note>
       </ion-col>
     </ion-row>
-
   </ion-card>
 </ion-content>
