--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -5,49 +5,16 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>Feed</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Films</ion-title>
   </ion-navbar>
-
 </ion-header>
 
+<ion-content>
+<ion-list>
+  <button ion-item *ngFor="let film of (films | async)?.results" (click)="openDetails(film)">
+    {{ film.title }}
+  </button>
+</ion-list>
 
-<ion-content padding>
-  <ion-card>
-    <ion-item>
-      <ion-avatar item-start>
-        <img src="assets/imgs/marty-avatar.png">
-      </ion-avatar>
-      <h2 class="feed_title">{{ nome_usuario }}</h2>
-      <p>February 17, 2018</p>
-    </ion-item>
-
-    <img src="assets/imgs/advance-card-bttf.png">
-
-    <ion-card-content>
-      <p>E la vamos nós.</p>
-    </ion-card-content>
-
-    <ion-row>
-      <ion-col>
-        <button ion-button icon-left clear small>
-          <ion-icon name="thumbs-up"></ion-icon>
-          <div>1 Likes</div>
-        </button>
-      </ion-col>
-      <ion-col>
-        <button ion-button icon-left clear small>
-          <ion-icon name="text"></ion-icon>
-          <div>1 Comments</div>
-        </button>
-      </ion-col>
-      <ion-col center text-center>
-        <ion-note>
-          1h ago
-        </ion-note>
-      </ion-col>
-    </ion-row>
-
-  </ion-card>
 </ion-content>
